2000-11-30  Akim Demaille  <akim@epita.fr>

	* sh.m4 (_AS_EXPR_PREPARE): Don't rely on the exit status of a
	back quote evaluation since the very system for which the test was
	written does not propagate it.  Groumph!

2000-11-30  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (_AC_EXEEXT): Also remove conftest$ac_exeext.
	Reported by Pavel.

2000-11-30  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (_AC_EXEEXT, _AC_OBJEXT): Make the two macros more
	alike: a loop over a sorted list of possible files.
	Don't cleanup on errors, the trap will do it.
	Cleanup when there are no errors.
	(_AC_EXEEXT): Use the empty string instead of `no' as the cached
	value.
	Be sure to prefer `.exe' to `' when the two are observable.
	Suggested by Lars and Earnie.

2000-11-30  Akim Demaille  <akim@epita.fr>

	When using Cygwin, in spite of all their efforts, it may happen
	that `confestval' be read in binary mode.  The shell then fails to
	properly strip the \r\n.
	Reported by Lars J. Aas.

	* aclang.m4 (AC_LANG_INT_SAVE): Don't add any trailing new line,
	and close the file.
	Suggested by Peter Eisentraut.

2000-11-30  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Systemology): New section.
	Some about QNX 4.

2000-11-30  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Special Shell Variables): Document RANDOM.

2000-11-30  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Limitations of Usual Tools): Some about cp
	and mv, thanks to Ian.

2000-11-29  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (_AC_OBJEXT): Skip *.tds, special case .o and
	.obj.
	Suggested by Lars.

2000-11-29  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Fix the portability of
	the default assignment of CONFIG_FILES, CONFIG_HEADERS,
	CONFIG_LINKS and CONFIG_COMMANDS.

2000-11-29  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CACHE_SAVE): Use the `clear' trick to work
	around broken seds.