@@ -5515,11 +5515,15 @@ the @samp{x} into account later in the pipe.
 @cindex @command{!}
 You can't use @command{!}, you'll have to rewrite your code.
 
+
 @item @command{break}
+@c ------------------
 @cindex @command{break}
 The use of @samp{break 2} etc. is safe.
 
+
 @item @command{case}
+@c -----------------
 @cindex @command{case}
 You don't need to quote the argument, no splitting is performed.
 
@@ -5545,7 +5549,9 @@ bash-2.02$ case /tmp in [\\/]*) echo OK;; esac
 OK
 @end example
 
+
 @item @command{echo}
+@c -----------------
 @cindex @command{echo}
 The simple @code{echo} is probably the most surprising source of
 portability troubles.
@@ -5562,7 +5568,9 @@ and Zsh (in @command{sh} emulation mode) report 1.  Please note that the
 problem is truly @command{echo}: all the shells understand @samp{'\n'}
 as the string composed of a backslash and an n.
 
+
 @item @command{exit}
+@c -----------------
 @cindex @command{exit}
 @c FIXME: A better merging between this item and `trap' is welcome.
 Some shell scripts, such as those generated by @command{autoconf}, use a
@@ -5576,7 +5584,9 @@ cannot determine whether it was invoked by plain @code{exit} or by
 @code{exit 1}.  Instead of calling @code{exit} directly, use the
 @code{AC_MSG_ERROR} macro that has a workaround for this problem.
 
+
 @item @command{export}
+@c -------------------
 @cindex @command{export}
 The builtin @command{export} dubs @dfn{environment variable} a shell
 variable.  Each update of exported variables corresponds to an update of
@@ -5606,7 +5616,16 @@ alternately @samp{foo} and @samp{bar}, although it should only print
 Therefore you should @command{export} again each environment variable
 you update.
 
+
+@item @command{false}
+@c ------------------
+@cindex @command{false}
+Don't expect @command{false} to exit with status 1: The native Bourne
+shell of Solaris 2.8 exits with status 255.
+
+
 @item @command{for}
+@c ----------------
 @cindex @command{for}
 To loop over positional arguments, use
 
@@ -5656,6 +5675,7 @@ fi
 @end example
 
 @item @command{set}
+@c ----------------
 @cindex @command{set}
 This builtin faces the usual problem with arguments starting with a
 dash.  Modern shells, such as Bash or Zsh understand @samp{--} to
@@ -5670,12 +5690,14 @@ set x $my_list; shift
 @end example
 
 @item @command{shift}
+@c ------------------
 @cindex @command{shift}
 Not only is @command{shift}ing a bad idea when there is nothing left to
 shift, but in addition it is not portable: the shell of @sc{mips
 risc/os} 4.52 refuses it.
 
 @item @command{test}
+@c -----------------
 @cindex @command{test}
 The @code{test} program is the way to perform many file and string
 tests.  It is often invoked by the alternate name @samp{[}, but using
@@ -5773,7 +5795,9 @@ expr "x$ac_feature" : '.*[^-a-zA-Z0-9_]' >/dev/null &&
 "X@var{foo}" | grep "^X@var{bar}"}, because it avoids problems when
 @samp{@var{foo}} contains backslashes.
 
+
 @item @command{trap}
+@c -----------------
 @cindex @command{trap}
 It is safe to trap at least the signals 1, 2, 13 and 15.  You can also
 trap 0, i.e., have the trap run when the script end (either via an
@@ -5825,6 +5849,7 @@ $ exit
 Fortunately this bug affects only trap.
 
 @item @command{true}
+@c -----------------
 @cindex @command{true}
 @cindex @command{:}
 Don't worry: as far as we know @command{true} is portable.
@@ -5841,6 +5866,7 @@ for @command{true}.
 
 
 @item @command{unset}
+@c ------------------
 @cindex @command{unset}
 You cannot assume the support of @command{unset}, nevertheless, because
 it is extremely useful to disable embarrassing variables such as
@@ -5870,6 +5896,7 @@ find some limitations you should be aware of.
 
 @table @asis
 @item @command{awk}
+@c ----------------
 @cindex @command{awk}
 Don't leave white spaces before the parentheses in user functions calls,
 @sc{gnu} awk will reject it:
